fix(media card): shift font size for new token
affects: @entur/layout

--- a/packages/layout/src/MediaCard.scss
+++ b/packages/layout/src/MediaCard.scss
@@ -21,7 +21,7 @@
     transition: transform $timings-medium ease-in-out;
   }
   &__title {
-    font-size: $font-sizes-extra-large;
+    font-size: $font-sizes-extra-large2;
     line-height: $line-heights-extra-large3;
     font-weight: $font-weights-heading;
     margin: 0.75rem 0 0.5rem;
